--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
             <a class="link" href="motorcycle.html">Motorcycles</a>
           </li>
           <li>
-            <a class="link" href="3dimg.html">3D Images</a>
+            <a class="link" href="3d.html">3D Images</a>
           </li>
           <li>
             <a class="link" href="scalemodels.html">Modeling</a>
