--- a/3d.html
+++ b/3d.html
@@ -60,7 +60,7 @@
       <a href="index.html" class="header-img">
         <img
           class="logo"
-          src="img/glagow-city-silhouette.jpg"
+          src="img/glagow-city-silhouette.png"
           alt="Glasgow skyline drawing"
         />
       </a>
