--- a/3d.html
+++ b/3d.html
@@ -75,7 +75,7 @@
             <a class="link" href="motorcycle.html">Motorcycles</a>
           </li>
           <li>
-            <a class="link" href="img.html">3D Images</a>
+            <a class="link" href="3d.html">3D Images</a>
           </li>
           <li>
             <a class="link" href="scalemodels.html">Modeling</a>
