--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
             then there is a whole new HTML with advanced features. So, my fifth
             diversion was to learn HTML, along with web design and layouts.
             Lucky me, there is a programming side to web design using something
-            called JavaScript for which I have already downloaded the
+            called JavaScript for which I have already downloaded the course.
           </p>
           <p class="description">
             So, returning to the beginning of this story, I built a web site to
