--- a/3d.html
+++ b/3d.html
@@ -98,7 +98,7 @@
     <section>
       <div class="gallery-title">
         <h2 class="heading-secondary">3D Image Gallery</h2>
-        <p class="description">
+        <p class="description gallery-description">
           Examples of a few of the 3D images made with Blender software
         </p>
       </div>
