--- a/3d.html
+++ b/3d.html
@@ -95,7 +95,7 @@
     <!-- ########### GALLERY ########## -->
     <!-- ############################## -->
 
-    <section>
+    <section class="container">
       <div class="gallery-title">
         <h2 class="heading-secondary">3D Image Gallery</h2>
         <p class="description gallery-description">
